          Notably, it caused a strange bug in Rose::DBx::Garden::Catalyst where the MyApp->config
          class hashref would get nuked after a call to Class::C3::initialize(). Yes. That fsked up.

0.44    23 May 2009
        * check for symlink() support in Model::File at compile time and return from rm_related()
          if not supported. Fixes spurious test breakage on Win32.
          See https://rt.cpan.org/Ticket/Display.html?id=46314

0.45    13 June 2009
        * fix multi-column sort via cxc-order param (requires Sort::SQL 0.04)

0.46    20 Nov 2009
        * tweek Model::File _find to avoid multiple loops over the same list of root dirs.
        * tweek Model::File->search to read() each object like fetch() does.
        * add dep on Sort::SQL 0.07 to avoid sql injection (RT#51777)

        
0.47    15 Jan 2009
        * fix tutorial per RT#53396
        * fix bug in base Controller->fetch() where multiple PKs where one value is null were slipping
          through. Reported by Adam Mackler.

0.48    29 Jan 2009
        * fix bug with create() introduced in 0.47.
        * remove explicit dep on Class::C3 per RT54097

0.49    11 April 2010
        * uri_for_view_on_single_result() will return uri for 'view' action,
          regardless of value of can_write().

0.50    13 May 2010
        * fix make_primary_key_string() to get rid of bad sprintf() call

0.51    19 May 2010
        * added use_request_uri_for_path to test MyApp to fix 
          test failures with Catalyst::Runtime 5.80024

0.52    13 July 2011
        * doc fix in Tutorial via RT#68499
        * tests fixed for RT#68779

0.53    31 Oct 2012
        * add list_related and view_related primarily for REST support

0.54    xxx
        * add Results->serialize() method
        * refactor some Controller methods into a Role class
        * Model::File->fetch() now returns undef if file does not exist. Add Model::File->prep_new_object().
